Fixed data-picker z-index

--- a/panel/fields/date/date.css
+++ b/panel/fields/date/date.css
@@ -13,6 +13,7 @@
   font-size: 15px;
   border-radius: 4px;
   margin-top: 10px;
+  z-index: 999!important;
 }
 .ui-datepicker a {
   color: #fff;
